--- a/index.html
+++ b/index.html
@@ -3,23 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RPS Arena</title>
+    <title>RPS Arena: Gemini Edition</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700;900&display=swap" rel="stylesheet">
     <style>
       body {
-        font-family: 'Inter', sans-serif;
+        font-family: 'Outfit', sans-serif;
+        background-color: #0f172a;
+        overflow-x: hidden;
       }
-      /* Custom bounce animation for waiting state */
+      
+      /* Nebula Background */
+      .nebula-bg {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        z-index: -1;
+        background: 
+          radial-gradient(circle at 15% 50%, rgba(79, 70, 229, 0.15) 0%, transparent 25%), 
+          radial-gradient(circle at 85% 30%, rgba(236, 72, 153, 0.15) 0%, transparent 25%),
+          radial-gradient(circle at 50% 80%, rgba(6, 182, 212, 0.15) 0%, transparent 25%);
+        filter: blur(40px);
+        animation: pulse-nebula 10s ease-in-out infinite alternate;
+      }
+
+      @keyframes pulse-nebula {
+        0% { opacity: 0.8; transform: scale(1); }
+        100% { opacity: 1; transform: scale(1.1); }
+      }
+
+      /* Glassmorphism Utilities */
+      .glass-panel {
+        background: rgba(30, 41, 59, 0.4);
+        backdrop-filter: blur(12px);
+        -webkit-backdrop-filter: blur(12px);
+        border: 1px solid rgba(255, 255, 255, 0.05);
+      }
+
+      /* Animations */
       @keyframes float {
         0%, 100% { transform: translateY(0); }
         50% { transform: translateY(-10px); }
       }
       .animate-float {
-        animation: float 3s ease-in-out infinite;
+        animation: float 4s ease-in-out infinite;
       }
 
-      /* Game Move Animations */
       @keyframes rock-smash {
         0% { transform: scale(0.5) translateY(-50px) rotate(-45deg); opacity: 0; }
         60% { transform: scale(1.1) translateY(0) rotate(0deg); opacity: 1; }
@@ -47,17 +78,23 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
+    "react": "https://esm.sh/react@18.2.0",
+    "react/jsx-runtime": "https://esm.sh/react@18.2.0/jsx-runtime",
+    "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.292.0",
+    "@google/genai": "https://esm.sh/@google/genai@0.1.1",
+    "peerjs": "https://esm.sh/peerjs@1.5.2?bundle-deps",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
-    "peerjs": "https://esm.sh/peerjs@1.5.2?bundle-deps"
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
-  <body class="bg-slate-900 text-white min-h-screen">
+  <body class="text-white min-h-screen selection:bg-indigo-500 selection:text-white">
+    <div class="nebula-bg"></div>
     <div id="root"></div>
+    <!-- Entry point for the application -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
